commit con http y css clase 15

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post</title>
+    <title>Post 2</title>
     <link rel="stylesheet" href="css/style.css"
 </head>
 <body>
+    <div id="container">
+        <div id="cabecera">
+            header
+        </div>
+        <div id="post">
     <h1>Blog Post</h1>
     <p>Hola mundo</p>
-
+</div>
+</div>
 </body>
 </html>
