estrucrura inicial cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            header
+            Cabecera
         </div>
         <div id="post">
     <h1>Blog Post</h1>
