--- a/blogpost.html
+++ b/blogpost.html
@@ -11,12 +11,13 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de cabecera</span>
+            <span id="tagline">Maestro</span>
         </div>
         <div id="post">
     <h1>Blog Post</h1>
     <p>Hola mundo este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
     <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+    <p>Like</p>
     
 </div>
 </div>
