--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes/LOGO MUONS-04.png" />
             Hyperblog
             <span id="tagline"> Blog Yef</span>
         </div>
