--- a/blogpost.html
+++ b/blogpost.html
@@ -17,8 +17,11 @@
     <h1>Blog Post</h1>
     <p>Hola mundo este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
     <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-    <p>Like</p>
-    
+    <p>Like</p>  
+</div>
+<div id="footer" >
+    <img id="icon" src="https://img.icons8.com/small/16/000000/among-us.png"/>
+    Hecho por la clase de Platzi
 </div>
 </div>
 </body>
