--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
         <div id="post">
     <h1>Blog Post</h1>
     <p>Hola mundo este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+    <p><img id="profile" src="imagenes/profile.png" /></p>
     <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
     <p>Like</p>  
 </div>
