Imagen de profile a imgur

--- a/blogpost.html
+++ b/blogpost.html
@@ -22,7 +22,7 @@
     <p>Like</p>  
 </div>
 <div id="footer" >
-    <img id="icon" src="https://img.icons8.com/small/16/000000/among-us.png"/>
+    <img id="icon" src="https://imgur.com/E8aDILk"/>
     Hecho por la clase de Platzi
 </div>
 </div>
